--- a/spring_web/.classpath
+++ b/spring_web/.classpath
@@ -20,7 +20,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/KCM/sqldeveloper/jdbc/lib/ojdbc8.jar">
+	<classpathentry kind="lib" path="/Users/cmrikim/eclipse/ojdbc8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
